# base-ramses

./: .gitignore  README.md  alembic.ini  base_model.py  broker.py  database.py  dev  docker-compose.yml  dump.sql  main.py  objectif_stephane.md  objectif_thibault.md  pyproject.toml  ramses  ramses.sh  scheduler.py  script.py  settings.py  test.py
Ramses_scripts/: RAMSES_lib.py  RAMSES_multi_param_strat_basic.py  RAMSES_multi_param_strat_basic_2.py  db.py
Ramses_scripts/lib_functions/lib_features/: basic_features.py  trading_features.py
clients/: db_client.py
crud/: base_crud.py  instrument_crud.py  timeseries_crud.py  trading_model_crud.py
extractors/: base.py  quandl_extractor.py  y_finance_extractor.py
features/: rsi.py
migrations/: env.py
migrations/versions/: 047f336ee843_automigrations.py  21c0ea38ab54_automigrations.py  43e807d1d408_initial_migration.py  633874a5211e_automigrations.py  64a1e35293d9_automigrations.py  738e326d96ab_initial_migration.py  8ee3d9a0c2a8_automigrations.py
models/: __init__.py  base_model.py  broker.py  feature.py  feature_timeseries.py  instrument.py  model.py  model_enums.py  portfolio.py  portfolio_order.py  raw_data_timeseries.py  signal.py  timeseries.py  trading_model.py  user.py
strategies/: __init__.py  bollinger_bands_strategy.py  breakout_strategy.py  ma_strategy.py  macd_strategy.py  rsi_strategy.py
tests/: conftest.py
tests/datasets/: dataset_generator.py  generic.py
tests/fixtures/: api_mocks.py  database_fixtures.py
tests/integration/crud/: test_base_crud.py  test_instrument_crud.py  test_trading_model_crud.py
tests/strategies/: test_rsi_strategy.py
tests/trading_models/: test_ramses_model.py
tests/unit/extractors/: test_quandl_extractor.py  test_yfinance_extractor.py
tests/unit/strategies/: test_breakout_strategy.py  test_rsi_strategy.py
tests/unit/trading_models/: test_ramses_model.py
trading_models/: band_model.py  base.py  ramses_model.py
utils/: enums.py  string.py  testing.py
