[tool.poetry]
name = "base-ramses"
version = "0.1.0"
description = ""
authors = ["Thibault RIZZO <thib.rizzo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^1.4.45"
alembic = "^1.9.1"
psycopg2 = "^2.9.5"
stumpy = "^1.11.1"
yfinance = "^0.2.3"
pydantic = "^1.10.4"
python-dotenv = "^0.21.1"
sqlalchemy-utils = "^0.39.0"
pandas = "^1.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"