[tool.poetry]
name = "base-ramses"
version = "0.1.0"
description = ""
authors = ["Thibault RIZZO <thib.rizzo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"
stumpy = "^1.12.0"
yfinance = "^0.2.31"
matplotlib = "^3.8.1"
ta = "^0.11.0"
numpy = "1.25"
pandas = "2.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | build
    | dist
  )/
)
'''

[tool.isort]
line_length = 120
force_sort_within_sections = true
include_trailing_comma = true
multi_line_output = 3
profile = "black"